# gnark-cuda

./: .gitignore  CMakeLists.txt  ICICLE_MSM_MONTGOMERY_CHUNKING_BUG.md  README.md
docs/: RESIDENT_PROVER_PLAN.md
include/: fr.h  gnark_cuda.h  plonk.h  ratio.h  types.h
src/: api.cu  frvec.cu  kzg.cu  plonk.cu  ratio.cu  vecops.cu
test/: test_icicle_mont.cu  test_shim.cu
